# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "OpenApi Capacity Fpoly",
-        "description": "OpenApi Capacity Fpoly<br>\n *      ✅NOTE✅\n *      Note: Khi sử dụng api authentication v1 cần nhập token bearer phần Authorize\n *      Note: Tìm kiếm api theo các tag\n *      Note: Thiếu , gặp bug -> chụp ảnh gửi cho BE sửa 🔧\n *      ✅END NOTE✅",
+        "description": "OpenApi Capacity Fpoly<br>\r\n *      ✅NOTE✅\r\n *      Note: Khi sử dụng api authentication v1 cần nhập token bearer phần Authorize\r\n *      Note: Tìm kiếm api theo các tag\r\n *      Note: Thiếu , gặp bug -> chụp ảnh gửi cho BE sửa 🔧\r\n *      ✅END NOTE✅",
         "contact": {
             "email": ""
         },
@@ -396,15 +396,44 @@
                 }
             }
         },
-        "/api/public/rating-major/{slug}": {
+        "/api/public/rating/major-contest/{slug}": {
             "get": {
                 "tags": [
                     "Rank user",
                     "User",
-                    "Major"
+                    "Major",
+                    "Rank_contest"
                 ],
                 "description": "Description api slider",
-                "operationId": "a543ea7b9a6c549431aca0fa06b2a645",
+                "operationId": "577545ef0fff46db289ede374ef0ed4a",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Slug chuyên ngành ",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{ status: true , data : data }"
+                    },
+                    "404": {
+                        "description": "{ status: false , message : 'Not found' }"
+                    }
+                }
+            }
+        },
+        "/api/public/rating/major-capacity/{slug}": {
+            "get": {
+                "tags": [
+                    "Rank user",
+                    "User",
+                    "Major",
+                    "Rank_capacity"
+                ],
+                "description": "Description api slider",
+                "operationId": "d7fa9de5e2c9a8f71174dbff45e84f8d",
                 "parameters": [
                     {
                         "name": "slug",
@@ -453,6 +482,18 @@
                         "name": "contest_id",
                         "in": "query",
                         "description": "Tuyển dụng thuộc bài test",
+                        "required": false
+                    },
+                    {
+                        "name": "major_id",
+                        "in": "query",
+                        "description": "Tuyển dụng thuộc chuyên ngành",
+                        "required": false
+                    },
+                    {
+                        "name": "skill_id",
+                        "in": "query",
+                        "description": "Tuyển dụng thuộc kỹ năng",
                         "required": false
                     },
                     {
@@ -1287,7 +1328,7 @@
         "securitySchemes": {
             "bearer_token": {
                 "type": "apiKey",
-                "description": "Nhập vào ô input dạng \"Bearer token\" <br> <b>Ví dụ</b>: <strong>Bearer 48|i93gO5EA6cBqiguiLCAiIAOiLkLoMXwoIvEnZvTn</strong>\n                     <br><br><hr>",
+                "description": "Nhập vào ô input dạng \"Bearer token\" <br> <b>Ví dụ</b>: <strong>Bearer 48|i93gO5EA6cBqiguiLCAiIAOiLkLoMXwoIvEnZvTn</strong>\r\n                     <br><br><hr>",
                 "name": "Authorization",
                 "in": "header"
             }
